--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
 
 :root {
   --opal-color: #ea5454;
@@ -21,6 +19,9 @@ body {
   font-family: "Poppins", sans-serif;
   font-size: 13px;
   color: var(--independence-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1,
